Fix word dragging on mobile

--- a/app/routes/app.words.($id)/Word.module.css
+++ b/app/routes/app.words.($id)/Word.module.css
@@ -26,4 +26,5 @@
 
 .handle {
   cursor: grab;
+  touch-action: none;
 }
